<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/activity_border"
    android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/first"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/title"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/what_would_you_like_to_hear"
            android:id="@+id/firstTextField"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp" />

        <requestFocus/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/secondTV"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/time"/>

        <TimePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timeView">

        </TimePicker>

</LinearLayout>