<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_talker"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="cursive"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/roundLayout"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:id="@+id/allActivities"
            android:textColor="@color/colorPrimary"
            android:fontFamily="cursive"
            android:text="@string/my_activities" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/roundLayout"
        android:layout_marginStart="50dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/activity_border"
        android:layout_marginEnd="50dp">

        <fragment
            android:id="@+id/fragment"
            android:name="com.example.timesayer.ListFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textLay"
            tools:layout="@layout/fragment_list" />




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:id="@+id/textLay"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_activity_added"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="7dp"
                android:fontFamily="cursive" />


        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>